# actix-web-example

./: .dockerignore  Cargo.toml  Makefile  README.md  compose.yaml  docker-compose.yml
.github/workflows/: test.yml
config/: settings.toml
docker/: Dockerfile_rust
docker/pg/: init.sql
migration/src/: lib.rs
scripts/: admin.hurl  app.hurl  dev.sh  requests.sh
src/: errors.rs  hash.rs  jwt.rs  lib.rs  main.rs  rand.rs  registry.rs  routes.rs  servers.rs  state.rs  toml.rs
src/dbs/: conn.rs
src/dbs/example/: sea_orm_active_enums.rs  users.rs
src/entities/: todos.rs  users.rs
src/handlers/: admin.rs  app.rs  basis.rs
src/middlewares/: auth_jwt.rs
src/repositories/: todo_repository.rs  todos.rs  users.rs
src/routes/: app.rs  basis.rs  info.rs  mod.rs  user.rs
src/schemas/: todos.rs
src/usecases/: admin.rs  app.rs  auth.rs  mod.rs
