[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8.13"
validator = { version = "0.18", features = ["derive"] }
