[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = { version = "0.4", features = ["std", "serde"] }
sea-orm = { version = "^0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8.13"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.18", features = ["derive"] }
