[package]
name = "api-server"
version = "0.5.0"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["tokio", "apistos-models"]

[dependencies]
actix-cors = "0.7.0"
actix-http = "3.8.0"
actix-web = "4"
actix-web-lab = "0.20"
anyhow = "1.0"
#apistos = { version = ">=0.2.6, <0.3", features = [
apistos = { version = "0.3", features = [
  "swagger-ui",
  "extras",
  "qs_query",
  "rapidoc",
  "redoc",
] }
apistos-models = "0.3"
argon2 = "0.5"
async-trait = "0.1"
base64 = "0.22"
cfg-if = "1.0.0"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
jsonwebtoken = "9"
jwt-simple = "0.11"
log = { version = "0.4", features = ["std", "serde"] }
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
schemars = { package = "apistos-schemars", version = "0.8" }
scrypt = "0.11"
sea-orm = { version = "^0.12.15", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
toml = "0.8.13"
tokio = { version = "1", features = ["full"] }
validator = { version = "0.18", features = ["derive"] }

[features]
default = ["pbkdf2"]
pbkdf2 = []
argon2 = []
scrypt = []
